Updated page title and added header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" type="text/css" rel="stylesheet">
-    <title>Document</title>
+    <title>CuEARated Cuisine</title>
 </head>
 
 <body>
-    
+   <header>
+       <h1>CuEARated Cuisine</h1>
+   </header> 
 </body>
 </html>
