--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,21 @@
 </head>
 
 <body>
-   <header>
-       <h1>CuEARated Cuisine</h1>
-   </header> 
+    <header>
+        <h1>CuEARated Cuisine</h1>
+    </header>
+    <div>
+        <form>
+            <h2>What kind of food would you like?</h2>
+            <input id="searchQuery"></input>
+            <button id="searchBtn">Search</button>
+        </form>
+    </div>
+    <div id="test"></div>
+    <!-- jQuery JS -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="cse.js"></script>
 </body>
+
 </html>
