--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <form>
                     <input id="searchQuery"></input>
                     <button id="searchBtn">Search</button>
+                </form>
             </h3>
         </section>
         <br>
