--- a/index.html
+++ b/index.html
@@ -16,19 +16,32 @@
         <!-- Recipes section/page -->
         <section class="recipes">
             <!-- Question -->
-            <h3 class="bubble thought">What do I want to eat?</h3>
+            <div class="bubble thought">What do I want to eat?</div>
 
             <!-- Google API results -->
-            <h3 class="bubble speech">
+            <div class="bubble speech">
                 Insert results div here
-            </h3>
+            </div>
         </section>
         <br>
         <!-- Music section/page -->
         <section class="music">
             <!-- Question -->
-            <h3 class="bubble thought">What do I want to<br> listen to?</h3>
+            <div class="bubble thought">What do I want to<br>listen to?</div>
             <!-- Genre option buttons here -->
+            <div class="genre-buttons">
+                <button type="button" class="btn btn-dark">Genre 1</button>
+                <button type="button" class="btn btn-info">Genre 2</button>
+                <button type="button" class="btn btn-dark">Genre 3</button>
+                <br>
+                <button type="button" class="btn btn-info">Genre 4</button>
+                <button type="button" class="btn btn-dark">Genre 5</button>
+                <button type="button" class="btn btn-info">Genre 6</button>
+                <br>
+                <button type="button" class="btn btn-dark">Genre 7</button>
+                <button type="button" class="btn btn-info">Genre 8</button>
+                <button type="button" class="btn btn-dark">Genre 9</button>
+            </div>
             <!-- Spotify API results here -->
         </section>
     </div>
