Updated "question" search function inside bubble

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
         <!-- Recipes section/page -->
         <section class="recipes">
             <!-- Question -->
-            <div class="bubble thought">What do I want to eat?</div>
+            <div class="bubble thought">What do I want to eat?
+            <form>
+                <input id="searchQuery"></input>
+                <button id="searchBtn">Search</button>
+            </form>
+        </div>
 
             <!-- Google API results -->
             <div class="bubble speech">
-                <form>
-                    <input id="searchQuery"></input>
-                    <button id="searchBtn">Search</button>
-                </form>
+            <div>Empty div for results</div>
             </div>
         </section>
         <br>
         <!-- Music section/page -->
         <section class="music">
             <!-- Question -->
-            <div class="bubble thought">What do I want to<br> listen to?</div>
-            <!-- Genre option buttons here -->
             <div class="bubble thought">What do I want to<br>listen to?</div>
             <!-- Genre option buttons here -->
             <div class="genre-buttons">
