--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </div>
 
             <!-- Google API results -->
-            <div class="bubble speech">
-            <div>Empty div for results</div>
+            <div class="bubble speech invisible" id="cseDiv">
+                <div id="queryResults"></div>
             </div>
         </section>
         <br>
