Removed music button section

--- a/index.html
+++ b/index.html
@@ -31,24 +31,11 @@
         </section>
         <br>
         <!-- Music section/page -->
-        <section class="music">
+        <section class="map">
             <!-- Question -->
-            <div class="bubble thought">What do I want to<br>listen to?</div>
-            <!-- Genre option buttons here -->
-            <div class="genre-buttons">
-                <button type="button" class="btn btn-dark">Genre 1</button>
-                <button type="button" class="btn btn-info">Genre 2</button>
-                <button type="button" class="btn btn-dark">Genre 3</button>
-                <br>
-                <button type="button" class="btn btn-info">Genre 4</button>
-                <button type="button" class="btn btn-dark">Genre 5</button>
-                <button type="button" class="btn btn-info">Genre 6</button>
-                <br>
-                <button type="button" class="btn btn-dark">Genre 7</button>
-                <button type="button" class="btn btn-info">Genre 8</button>
-                <button type="button" class="btn btn-dark">Genre 9</button>
-            </div>
-            <!-- Spotify API results here -->
+            <div class="bubble thought">Where's the nearest<br>grocery store?</div>
+            
+            <!-- Maps API results here -->
         </section>
     </div>
     <script src="https://code.jquery.com/jquery.js"></script>
