add giphy changes

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             </div>
         </section>
         <br>
-        <!-- Music section/page -->
+        <!-- Giphy section/page -->
+        <div id="giphyView"></div>
         <section class="music">
             <!-- Question -->
             <div class="bubble thought">What do I want to<br>listen to?</div>
@@ -54,6 +55,7 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="cse.js"></script>
+    <script type="text/javascript" src="giphy.js"></script>
 </body>
 
 </html>
