--- a/index.html
+++ b/index.html
@@ -15,6 +15,24 @@
         <header>
             <h1>CuEARated Cuisine</h1>
         </header>
+        <!-- Chefs section/page -->
+        <section class="chefs">
+            <!-- Question -->
+            <div class="bubble thought">Pick Your Chef
+                    <button id="gordonramsey"></button>
+                    <button id="inagarten"></button>
+                    <button id="guyfieri"></button>
+                    <button id="padmalakshmi"></button>
+            </div>
+        </section>
+        <br>
+        <!--Giphy section/page -->
+        <section class="giphy">
+            <!-- Empty div to display gifs -->
+            <div id="giphyDiv"></div>
+        </section>
+        <br>
+
         <!-- Recipes section/page -->
         <section class="recipes">
             <!-- Question -->
