--- a/index.html
+++ b/index.html
@@ -1,82 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="style.css" type="text/css" rel="stylesheet">
-    <title>CuEARated Cuisine</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+            integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+            integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+        <link href="style.css" type="text/css" rel="stylesheet">
+        <title>CuEARated Cuisine</title>
+    </head> 
 
-<body>
-    <div class="container">
-        <header>
-            <h1>CuEARated Cuisine</h1>
-        </header>
-        <!-- Chefs section/page -->
-        <section class="chefs">
-            <!-- Question -->
-            <div class="bubble thought">Pick Your Chef
-                    <button id="gordonramsey"></button>
-                    <button id="inagarten"></button>
-                    <button id="guyfieri"></button>
-                    <button id="padmalakshmi"></button>
-            </div>
-        </section>
-        <br>
-        <!--Giphy section/page -->
-        <section class="giphy">
-            <!-- Empty div to display gifs -->
-            <div id="giphyDiv"></div>
-        </section>
-        <br>
-
-        <!-- Recipes section/page -->
-        <section class="recipes">
-            <!-- Question -->
-            <div class="bubble thought">What do I want to eat?
-                <form>
-                    <input id="searchQuery"></input>
-                    <button id="searchBtn">Search</button>
-                </form>
-            </div>
-
-            <!-- Google API results -->
+    <body>
+        <div class="container">
+            <header>
+                <h1>CuEARated Cuisine</h1>
+            </header>
+            <!-- Chefs selection section -->
+            <section class="chefs">
+                <!-- Question -->
+                <div class="bubble speech">Pick Your Chef
+                    <br>
+                    <!-- Option buttons -->
+                    <div class="chef-buttons">
+                        <button class="btn btn-primary" id="gordonramsey">Gordon Ramsey</button>
+                        <button class="btn btn-primary" id="inagarten">Ina Garten</button>
+                        <button class="btn btn-primary" id="guyfieri">Guy Fieri</button>
+                        <button class="btn btn-primary" id="padmalakshmi">Padma Lakshmi</button>
+                    </div>
+                </div>
+            </section>
+            <br>
+            <!--Giphy section/page -->
+            <section class="giphy">
+                <!-- Empty div to display gifs -->
+                <div class="giphyDiv"></div>
+            </section>
+            <br>
+            <!-- Recipes section -->
+            <section class="recipes">
+                <!-- Question -->
+                <div class="bubble speech">What do I want to eat?
+                    <form>
+                        <input id="searchQuery"></input>
+                        <button class="btn btn-primary" id="searchBtn">
+                            <i class="fa fa-search" aria-hidden="true"></i>
+                        </button>
+                    </form>
+                </div>
+            </section>
+            <br>
+            <!-- Empty div to display gifs -->  
             <div class="bubble speech invisible" id="cseDiv">
                 <div id="queryResults"></div>
-            </div>
-        </section>
-        <br>
-
-        <!-- Spotify section/page -->
-        <section class="playlist">
-            <!-- Question -->
-            <div class="bubble thought">Now let's set the mood.
-                <button class="btn btn-primary" id="feelingLuckyBtn" style="background-color: #1DB954;">feeling lucky <i
-                    class="fa fa-headphones" aria-hidden="true"></i></button>
-                <br></br>
-                <div id="spotifyPlayer"></div>
-            </div>
-        </section>
-        <br>
-
-        <!-- Giphy section/page -->
-        <div id="giphyView"></div>
-        <section class="music">
-
-            <!-- Question -->
-            <div class="bubble thought">Where's the nearest<br>grocery store?</div>
-
-            <!-- Maps API results here -->
-        </section>
-    </div>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
-    <script type="text/javascript" src="cse.js"></script>
-    <script type="text/javascript" src="giphy.js"></script>
-    <script type="text/javascript" src="spotify.js"></script>
-</body>
-
+            </div> 
+            <br>
+            <!-- Spotify section/page -->
+            <section class="playlist">
+                <!-- Question -->
+                <div class="bubble speech">Now let's set the mood.
+                    <button class="btn btn-primary" id="feelingLuckyBtn" style="background-color: #1DB954;">feeling lucky 
+                        <i class="fa fa-headphones" aria-hidden="true"></i>
+                    </button>
+                    <br></br>
+                    <div id="spotifyPlayer"></div>
+                </div>
+            </section>
+        </div>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="cse.js"></script>
+        <script type="text/javascript" src="giphy.js"></script>
+        <script type="text/javascript" src="spotify.js"></script>
+    </body>
 </html>
