Changed giphy 'class' to 'ID' to match .js file

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <!--Giphy section/page -->
             <section class="giphy">
                 <!-- Empty div to display gifs -->
-                <div class="giphyDiv"></div>
+                <div id="giphyDiv"></div>
             </section>
             <br>
             <!-- Recipes section -->
