Changed button color

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <section class="playlist">
                 <!-- Question -->
                 <div class="bubble speech">Now let's set the mood.
-                    <button class="btn btn-primary" id="feelingLuckyBtn" style="background-color: #1DB954;">feeling lucky 
+                    <button class="btn btn-primary" id="feelingLuckyBtn">feeling lucky 
                         <i class="fa fa-headphones" aria-hidden="true"></i>
                     </button>
                     <br></br>
